# Hang-Skinme

./: .gitignore  AI_INGREDIENT_INSIGHTS.md  BIGQUERY_SETUP_SUMMARY.md  CALENDAR_PRODUCT_SEARCH.md  DAILY_ROUTINE_FEATURE.md  DASHBOARD_CALENDAR_FEATURE.md  INGREDIENT_ANALYSIS_FRONTEND.md  INGREDIENT_RISK_VISUALIZATION.md  README-ARCHITECTURE.md  README-milestone4.md  README.md  ROUTINE_TRENDS_GUIDE.md  agent.py  data.dvc  deployment.py  docker-compose.yml  interview_v2.html  package-lock.json  update.md
.dvc/: config
.github/workflows/: ci.yml
.specstory/: .gitignore
documentation/: API_README.md  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  BIGQUERY_API_README.md  BIGQUERY_SETUP_SUMMARY.md  CICD_README.md  DATA_VERSIONING_README.md  FASTAPI_README.md  FRONTEND_README.md  README.md  blog.md
documentation/changelog/: CHANGE_2026-04-16.md
documentation/features/: AI_INGREDIENT_INSIGHTS.md  CALENDAR_PRODUCT_SEARCH.md  DAILY_ROUTINE_FEATURE.md  DASHBOARD_CALENDAR_FEATURE.md  INGREDIENT_ANALYSIS_FRONTEND.md
notebooks/: image-analyzer.ipynb
reports/: Document.1 VM Setup.md  Document.3 RAG Pipeline Design and Usage.md  MILESTONE_4.md  interview_factcheck.md
setup/: import_to_rag.py  rag_setup.py
src/api-service/: Dockerfile  check_bigquery_schema.py  pyproject.toml  test_bigquery.py
src/api-service/agent/: analysis_agent.py  bigquery_service.py  daily_routine_manager.py  image_analysis_agent.py  ingredient_analyzer.py  ingredient_risk_classifier.py  recommendation_agent.py  routing_agent.py
src/api-service/agent/auth/: __init__.py  auth_manager.py
src/api-service/agent/personalization/: cache.py  calendar_manager.py  chat_logger.py  image_upload_handler.py  profile_extractor.py  user_context_retriever.py  user_profile_manager.py  weather_context_manager.py  weather_utils.py
src/api-service/api-service/: main.py  runner.py
src/data-collection/dermnet/: Dockerfile  dermnet_embed_and_index.py  dermnet_preprocess.py  dermnet_scrape.py  pyproject.toml
src/data-collection/ewg/: Dockerfile  docker-compose.yml  ewg_preprocess.py  ewg_scrape.py  pyproject.toml
src/deployment/: Dockerfile  deploy-k8s-ssl.sh  deploy-k8s-update.sh  docker-shell.sh
src/deployment/deploy_images/: Pulumi.dev.yaml  __main__.py
src/deployment/deploy_k8s/: Pulumi.dev.yaml  Pulumi.ssl.yaml  __main__.py  create_cluster.py  create_network.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
src/frontend/: .dockerignore  .gitignore  Dockerfile.dev  build-mobile.sh  capacitor.config.ts  deep-analyze.py  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/frontend/android/: gradle.properties
src/frontend/android/app/: build.gradle
src/frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/frontend/src/components/: AnimatedGradientBackground.tsx  CapacitorInit.tsx  ClientProviders.tsx  CompactCalendar.tsx  ConditionalLayout.tsx  DashboardContent.tsx  (+6 more)
tests/: conftest.py
tests/integration/: test_api.py
tests/system/: test_system_api.py
tests/unit/: test_personalization_cache.py  test_personalization_context_retriever.py  test_personalization_profile_manager.py  test_utils.py
(+28 files in other folders)
