[project]
name = "app"
version = "0.1.0"
description = "Vertex AI RAG agent"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "chromadb>=1.1.0",
    "google-adk>=1.8.0",
    "google-genai>=1.39.1",
    "google-cloud-aiplatform>=1.71.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.11.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=1.95.1",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # this line is the fix
    "onnxruntime; sys_platform != 'darwin'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
