[project]
name = "dermnet-pipeline"
version = "0.1.0"
description = "DermNet data pipeline for scraping, preprocessing and embedding"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "httpx>=0.28.1",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
    "nltk>=3.8.1",
    "pandas>=2.3.3",
    "chromadb>=1.1.0",
    "langchain>=0.3.27",
    "langchain-core>=0.2.0",
    "google-genai>=1.39.1",
    "google-cloud-aiplatform>=1.68.0",
    "google-cloud-storage>=2.18.0",
]
